--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Nawiri Organization</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	    <link href="imgages/Nawiri-Logo.png" rel="icon">
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
 
